Brightness toast panel - dialog displayed showing brightness when using statusbar brightness control
Change-Id: I8f02f12ae6c8262a1df2bb3218dc17109cd90587

Conflicts:

	packages/SystemUI/res/values/dimens.xml
	packages/SystemUI/res/values/styles.xml

--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -118,5 +118,12 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">18sp</item>
     </style>
+
+    <style name="BrightnessPanel">
+        <item name="android:windowAnimationStyle">@*android:style/Animation.VolumePanel</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
     
 </resources>
